# MultiverseNote

./: .gitignore  .gitmodules  README.md  README_zh-CN.md  app.json  main.py  pyproject.toml  setup.py
app/: main.py
app/bots/: __init__.py  baseBot.py  openaiBot.py  petalsBot.py  wenxinBot.py
app/control/bots/: baseBot.py
app/control/services/: readFileService.py
app/dao/: __init__.py  agentDataManager.py  configDataManager.py  historyDataManager.py  vectorDataManager.py
app/model/: agentModel.py  configModel.py  dataModel.py
app/tool/: getStopsTool.py
app/tools/: README.md  __init__.py  searchOnlineTool.py
app/view/: _baseView.py  flaskView.py  speechView.py  taipyView.py
archive/: vectorDataManager.py
archive/tools/: tool_register.json
backend/: README.md  config.py  config.yaml  main.py  pyproject.toml  requirements.txt  server.py  setup.py
backend/app/: chatBot.py  main.py
backend/config/: __init__.py  appConfig.py  config.py  testConfig.py
backend/tests/: historyTest.py  openaiModelTest.py  test.py  test_config.yaml
docs/drawio/: app_structure.drawio
docs/en/: developer_documentation.md  faq_and_troubleshooting.md  getting_started.md  installation_guide.md  user_manual.md
docs/zh/: developer_documentation.md  faq_and_troubleshooting.md  getting_started.md  user_manual.md
frontend/: .gitignore  README_Expo.md  app.json  main.py  package-lock.json  package.json
storage/agent/: girl_jk.yaml  piano_artist.yaml
storage/config/: base_config.yaml  main_config.yaml
tests/functional/: functional_api_test.py  test_agentDataManager.py
(+69 files in other folders)
